--- a/package.json
+++ b/package.json
@@ -1,380 +1,11 @@
 {
   "name": "chatapp",
   "version": "1.0.0",
+  "engines" : {
+    "node" : "16.13.0"
+  },
   "description": "",
   "main": "server.js",
-  "dependencies": {
-    "abbrev": "^1.1.1",
-    "ansi-escapes": "^3.2.0",
-    "after": "^0.8.2",
-    "app-path": "^3.3.0",
-    "ansi-regex": "^3.0.0",
-    "asn1": "^0.2.6",
-    "ansi-align": "^2.0.0",
-    "accepts": "^1.3.7",
-    "ansicolors": "^0.3.2",
-    "backo2": "^1.0.2",
-    "ansi-styles": "^3.2.1",
-    "anymatch": "^3.1.1",
-    "argparse": "^1.0.10",
-    "array-union": "^2.1.0",
-    "array-flatten": "^1.1.1",
-    "arraybuffer.slice": "^0.0.7",
-    "base64id": "^2.0.0",
-    "base64-js": "^1.5.1",
-    "bcrypt-pbkdf": "^1.0.2",
-    "blob": "^0.0.5",
-    "base64-arraybuffer": "^0.1.4",
-    "balanced-match": "^1.0.0",
-    "boxen": "^1.3.0",
-    "bl": "^1.2.3",
-    "bluebird": "^3.7.2",
-    "buffer-alloc": "^1.2.0",
-    "buffer-fill": "^1.0.0",
-    "brace-expansion": "^1.1.11",
-    "binary-extensions": "^2.0.0",
-    "byline": "^5.0.0",
-    "braces": "^3.0.2",
-    "capture-stack-trace": "^1.0.1",
-    "body-parser": "^1.19.0",
-    "bytes": "^3.1.0",
-    "cacheable-request": "^2.1.4",
-    "cardinal": "^2.1.1",
-    "chardet": "^0.7.0",
-    "buffer-alloc-unsafe": "^1.1.0",
-    "clean-stack": "^1.3.0",
-    "chownr": "^1.1.4",
-    "chokidar": "^3.3.1",
-    "chalk": "^2.4.2",
-    "camelcase": "^4.1.0",
-    "cli-width": "^3.0.0",
-    "cli-progress": "^3.9.1",
-    "ci-info": "^1.6.0",
-    "cli-ux": "^4.9.3",
-    "cli-cursor": "^3.1.0",
-    "cli-boxes": "^1.0.0",
-    "clone-response": "^1.0.2",
-    "component-inherit": "^0.0.3",
-    "colors": "^1.4.0",
-    "co-wait": "^0.0.0",
-    "commander": "^2.20.3",
-    "color-name": "^1.1.3",
-    "co": "^4.6.0",
-    "component-emitter": "^1.3.0",
-    "color-convert": "^1.9.3",
-    "concat-map": "^0.0.1",
-    "component-bind": "^1.0.0",
-    "content-disposition": "^0.5.3",
-    "create-error-class": "^3.0.2",
-    "core-util-is": "^1.0.3",
-    "content-type": "^1.0.4",
-    "configstore": "^3.1.2",
-    "cross-spawn": "^5.1.0",
-    "cookie-signature": "^1.0.6",
-    "cookie": "^0.4.0",
-    "decompress-response": "^3.3.0",
-    "debug": "^2.6.9",
-    "decode-uri-component": "^0.2.0",
-    "duplexer3": "^0.1.4",
-    "destroy": "^1.0.4",
-    "dir-glob": "^3.0.1",
-    "date-fns": "^2.27.0",
-    "crypto-random-string": "^1.0.0",
-    "depd": "^1.1.2",
-    "dot-prop": "^4.2.0",
-    "ee-first": "^1.1.1",
-    "edit-string": "^1.1.6",
-    "end-of-stream": "^1.4.4",
-    "engine.io": "^3.5.0",
-    "deep-extend": "^0.6.0",
-    "error-ex": "^1.3.2",
-    "emoji-regex": "^8.0.0",
-    "engine.io-client": "^3.5.0",
-    "eventemitter3": "^4.0.7",
-    "encodeurl": "^1.0.2",
-    "etag": "^1.8.1",
-    "escape-html": "^1.0.3",
-    "esprima": "^4.0.1",
-    "engine.io-parser": "^2.2.1",
-    "fastq": "^1.13.0",
-    "extract-stack": "^1.0.0",
-    "execa": "^0.7.0",
-    "external-editor": "^3.1.0",
-    "filesize": "^4.2.1",
-    "escape-string-regexp": "^1.0.5",
-    "fast-glob": "^3.2.7",
-    "fast-levenshtein": "^2.0.6",
-    "foreman": "^3.0.1",
-    "express": "^4.17.1",
-    "follow-redirects": "^1.14.6",
-    "fill-range": "^7.0.1",
-    "figures": "^3.2.0",
-    "forwarded": "^0.1.2",
-    "fs-extra": "^7.0.1",
-    "finalhandler": "^1.1.2",
-    "fs-constants": "^1.0.0",
-    "github-url-to-object": "^4.0.6",
-    "from2": "^2.3.0",
-    "global-dirs": "^0.1.1",
-    "glob-parent": "^5.1.2",
-    "fresh": "^0.5.2",
-    "fs.realpath": "^1.0.0",
-    "growly": "^1.3.0",
-    "got": "^6.7.1",
-    "get-stream": "^3.0.0",
-    "globby": "^11.0.4",
-    "has-cors": "^1.1.0",
-    "has-binary2": "^1.0.3",
-    "graceful-fs": "^4.2.3",
-    "glob": "^7.2.0",
-    "here": "^0.0.2",
-    "has-to-string-tag-x": "^1.4.1",
-    "has-ansi": "^2.0.0",
-    "has-flag": "^3.0.0",
-    "has-symbol-support-x": "^1.4.2",
-    "heroku": "^7.59.2",
-    "heroku-exec-util": "^0.7.5",
-    "heroku-cli-util": "^8.0.12",
-    "heroku-client": "^3.1.0",
-    "http-call": "^5.3.0",
-    "http-cache-semantics": "^3.8.1",
-    "http-errors": "^1.7.2",
-    "iconv-lite": "^0.4.24",
-    "http-proxy": "^1.18.1",
-    "ignore-by-default": "^1.0.1",
-    "ignore": "^5.2.0",
-    "indent-string": "^3.2.0",
-    "import-lazy": "^2.1.0",
-    "imurmurhash": "^0.1.4",
-    "hyperlinker": "^1.0.0",
-    "inflight": "^1.0.6",
-    "inquirer": "^7.3.3",
-    "ip-address": "^5.9.4",
-    "inherits": "^2.0.3",
-    "indexof": "^0.0.1",
-    "ini": "^1.3.5",
-    "into-stream": "^3.1.0",
-    "ipaddr.js": "^1.9.1",
-    "is-arrayish": "^0.2.1",
-    "is-docker": "^2.2.1",
-    "is-fullwidth-code-point": "^2.0.0",
-    "is-installed-globally": "^0.1.0",
-    "is-extglob": "^2.1.1",
-    "is-binary-path": "^2.1.0",
-    "is-object": "^1.0.2",
-    "is-ci": "^1.2.1",
-    "is-obj": "^1.0.1",
-    "is-npm": "^1.0.0",
-    "is-glob": "^4.0.1",
-    "is-number": "^7.0.0",
-    "is-stream": "^1.1.0",
-    "is-retry-allowed": "^1.2.0",
-    "is-redirect": "^1.0.0",
-    "is-path-inside": "^1.0.1",
-    "is-wsl": "^1.1.0",
-    "isexe": "^2.0.0",
-    "isurl": "^1.0.0",
-    "js-yaml": "^3.14.1",
-    "is-url": "^1.2.4",
-    "is-plain-obj": "^1.1.0",
-    "isarray": "^2.0.1",
-    "json-buffer": "^3.0.0",
-    "jsbn": "^1.1.0",
-    "json-parse-better-errors": "^1.0.2",
-    "keypair": "^1.0.1",
-    "latest-version": "^3.1.0",
-    "lodash": "^4.17.21",
-    "lodash.flatten": "^4.4.0",
-    "jsonfile": "^4.0.0",
-    "iterm2-version": "^4.2.0",
-    "lodash.defaults": "^4.2.0",
-    "lodash.keyby": "^4.6.0",
-    "lodash.template": "^4.5.0",
-    "lodash.sortby": "^4.7.0",
-    "keyv": "^3.0.0",
-    "lodash.templatesettings": "^4.2.0",
-    "log-chopper": "^1.0.2",
-    "lowercase-keys": "^1.0.1",
-    "lru-cache": "^4.1.5",
-    "merge2": "^1.4.1",
-    "make-dir": "^1.3.0",
-    "lodash._reinterpolate": "^3.0.0",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "mime-db": "^1.43.0",
-    "mime": "^1.6.0",
-    "methods": "^1.1.2",
-    "micromatch": "^4.0.4",
-    "mkdirp": "^0.5.5",
-    "mime-types": "^2.1.26",
-    "minimist": "^1.2.5",
-    "load-json-file": "^5.3.0",
-    "minimatch": "^3.0.4",
-    "mimic-response": "^1.0.1",
-    "moment": "^2.24.0",
-    "mute-stream": "^0.0.8",
-    "natural-orderby": "^2.0.3",
-    "mimic-fn": "^2.1.0",
-    "mustache": "^2.3.2",
-    "netrc-parser": "^3.1.6",
-    "node-fetch": "^2.6.6",
-    "node-notifier": "^5.4.5",
-    "ms": "^2.0.0",
-    "negotiator": "^0.6.2",
-    "node-forge": "^0.7.5",
-    "normalize-path": "^3.0.0",
-    "nopt": "^1.0.10",
-    "nodemon": "^2.0.2",
-    "object-assign": "^4.1.1",
-    "object-treeify": "^1.1.33",
-    "once": "^1.4.0",
-    "nice-try": "^1.0.5",
-    "npm-run-path": "^2.0.2",
-    "normalize-url": "^2.0.1",
-    "on-finished": "^2.3.0",
-    "opn": "^3.0.3",
-    "original": "^1.0.2",
-    "os-tmpdir": "^1.0.2",
-    "osenv": "^0.1.5",
-    "os-homedir": "^1.0.2",
-    "onetime": "^5.1.2",
-    "p-finally": "^1.0.0",
-    "p-cancelable": "^0.4.1",
-    "p-is-promise": "^1.1.0",
-    "open": "^6.4.0",
-    "parseqs": "^0.0.6",
-    "p-timeout": "^2.0.1",
-    "parse-json": "^4.0.0",
-    "parseuri": "^0.0.6",
-    "path-is-inside": "^1.0.2",
-    "password-prompt": "^1.1.2",
-    "path-is-absolute": "^1.0.1",
-    "package-json": "^4.0.1",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^0.1.7",
-    "picomatch": "^2.3.0",
-    "path-key": "^2.0.1",
-    "path-type": "^4.0.0",
-    "plist": "^3.0.4",
-    "pify": "^3.0.0",
-    "pstree.remy": "^1.1.7",
-    "process-nextick-args": "^2.0.1",
-    "psl": "^1.8.0",
-    "prepend-http": "^1.0.4",
-    "proxy-addr": "^2.0.6",
-    "printf": "^0.5.1",
-    "pseudomap": "^1.0.2",
-    "qs": "^6.7.0",
-    "query-string": "^5.1.1",
-    "querystringify": "^2.2.0",
-    "readable-stream": "^2.3.7",
-    "rc": "^1.2.8",
-    "range-parser": "^1.2.1",
-    "pump": "^1.0.3",
-    "raw-body": "^2.4.0",
-    "redeyed": "^2.1.1",
-    "redis-parser": "^3.0.0",
-    "readdirp": "^3.3.0",
-    "queue-microtask": "^1.2.3",
-    "redis-errors": "^1.2.0",
-    "registry-auth-token": "^3.4.0",
-    "responselike": "^1.0.2",
-    "rimraf": "^2.6.3",
-    "reusify": "^1.0.4",
-    "run-async": "^2.4.1",
-    "requires-port": "^1.0.0",
-    "run-parallel": "^1.2.0",
-    "restore-cursor": "^3.1.0",
-    "semver-diff": "^2.1.0",
-    "rxjs": "^6.6.7",
-    "semver": "^5.7.1",
-    "registry-url": "^3.1.0",
-    "shebang-regex": "^1.0.0",
-    "safe-buffer": "^5.1.2",
-    "safer-buffer": "^2.1.2",
-    "shebang-command": "^1.2.0",
-    "send": "^0.17.1",
-    "shell-quote": "^1.7.3",
-    "serve-static": "^1.14.1",
-    "setprototypeof": "^1.1.1",
-    "socket.io-adapter": "^1.1.2",
-    "shellwords": "^0.1.1",
-    "slash": "^3.0.0",
-    "smooth-progress": "^1.1.0",
-    "signal-exit": "^3.0.2",
-    "shell-escape": "^0.2.0",
-    "socket.io": "^2.4.0",
-    "socket.io-client": "^2.4.0",
-    "ssh2-streams": "^0.4.10",
-    "sort-keys": "^2.0.0",
-    "ssh2": "^0.8.9",
-    "streamsearch": "^0.1.2",
-    "sparkline": "^0.2.0",
-    "socket.io-parser": "^3.4.1",
-    "strftime": "^0.10.1",
-    "strict-uri-encode": "^1.1.0",
-    "string-width": "^2.1.1",
-    "strip-bom": "^3.0.0",
-    "statuses": "^1.5.0",
-    "sprintf-js": "^1.1.2",
-    "string_decoder": "^1.1.1",
-    "strip-ansi": "^4.0.0",
-    "supports-color": "^5.5.0",
-    "strip-json-comments": "^2.0.1",
-    "term-img": "^4.1.0",
-    "tar-fs": "^1.16.3",
-    "term-size": "^1.2.0",
-    "through": "^2.3.8",
-    "temp": "^0.8.4",
-    "timed-out": "^4.0.1",
-    "strip-eof": "^1.0.0",
-    "supports-hyperlinks": "^1.0.1",
-    "tar-stream": "^1.6.2",
-    "toidentifier": "^1.0.0",
-    "tr46": "^0.0.3",
-    "tmp": "^0.0.33",
-    "tslib": "^1.9.3",
-    "to-buffer": "^1.1.1",
-    "to-array": "^0.1.4",
-    "to-regex-range": "^5.0.1",
-    "touch": "^3.1.0",
-    "tunnel-ssh": "^4.1.6",
-    "tunnel-agent": "^0.6.0",
-    "tweetnacl": "^0.14.5",
-    "treeify": "^1.1.0",
-    "type-is": "^1.6.18",
-    "type-fest": "^0.3.1",
-    "unzip-response": "^2.0.1",
-    "undefsafe": "^2.0.3",
-    "urijs": "^1.19.7",
-    "universalify": "^0.1.2",
-    "unique-string": "^1.0.0",
-    "url-parse": "^1.5.3",
-    "url-to-options": "^1.0.1",
-    "unpipe": "^1.0.0",
-    "validator": "^12.2.0",
-    "webidl-conversions": "^3.0.1",
-    "url-parse-lax": "^1.0.0",
-    "uuid": "^3.3.2",
-    "update-notifier": "^2.5.0",
-    "whatwg-url": "^5.0.0",
-    "which": "^1.3.1",
-    "utils-merge": "^1.0.1",
-    "util-deprecate": "^1.0.2",
-    "vary": "^1.1.2",
-    "widest-line": "^2.0.1",
-    "write-file-atomic": "^2.4.3",
-    "wrappy": "^1.0.2",
-    "wrap-ansi": "^4.0.0",
-    "xmlhttprequest-ssl": "^1.5.5",
-    "xmlbuilder": "^9.0.7",
-    "ws": "^7.4.2",
-    "xdg-basedir": "^3.0.0",
-    "yeast": "^0.1.2",
-    "yallist": "^2.1.2",
-    "yarn": "^1.22.17",
-    "xtend": "^4.0.2"
-  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -384,6 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/pavan997/chatapp.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
