--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "chatapp",
   "version": "1.0.0",
-  "engines" : {
-    "node" : "16.13.0"
+  "engines": {
+    "node": "16.13.0"
   },
   "description": "",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -21,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/pavan997/chatapp/issues"
   },
-  "homepage": "https://github.com/pavan997/chatapp#readme"
+  "homepage": "https://github.com/pavan997/chatapp#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "moment": "^2.29.1",
+    "socket.io": "^4.4.0"
+  }
 }
